# seiran

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  docker-compose.mono.yml  docker-compose.yml
.agents/: AGENTS.md
.sqlx/: query-09382e451e19d842b31274776df79044d292229a797d0700ecf4d387926ff2cc.json  query-10b752258eae2f8e2200aa1d4884f9126d2b1866c0924ca28cd25746e78a4c38.json  query-1f5f4a6e72a06472526d554e1e1dfe3b9a1d585147825c08285386452d5c99b0.json  query-27eddf6cb71050c19ffde9185f46325a83175f6f18de4c4dc62112fe6a9a3cd8.json  query-324db57df1629aedb2fccccbea66cd883f5b5a6423619041266ea8ed2a9f5d03.json  query-42ed01c1184a36cf9b9dfa4fa53991ae55805e1380828cb4f9a73437d94e9945.json  query-605956f08d4eafebb43e3fa0df6857a50e62a4ed1f48b5536ba2112283b06435.json  query-6c78225d41d399128d95e2bbfc34a08dfe9777686b557253b6caf11ab93dd002.json  query-95ccced629f2f176a36880a928e7eb7fd8dc4b5fb4731b4aeeb73fdbe0f4074d.json  query-ceca2b0f63aec1db7abb99a24b4af594047f966e4ad07cd5af8169eb91e8ec60.json  query-dd7bd59b18677603f29c90e12f9b8834c7fa8f1b77bb972b5dfcea0bbaa7e738.json  query-e9cea70b50908d345ad85c9bb05e069f047b26269ed58a2a032caf7cafb93125.json  query-f3193a26c870be68f89224e0ebc4647796e890f9757cda108a97aaa0a16bcdef.json
crates/seiran-api/: Cargo.toml
crates/seiran-api/src/: cloudflare.rs  error.rs  lib.rs  mailer.rs  main.rs  search.rs  streaming.rs
crates/seiran-api/src/handlers/: account.rs  actor_search.rs  auth.rs  blocks.rs  dm.rs  drive.rs  email_verify.rs  emojis.rs  favicon.rs  follows.rs  hashtags.rs  lists.rs  media_store.rs  meta.rs  miauth.rs  mod.rs  mutes.rs  notes.rs  ogp.rs  plc_genesis.rs  search.rs  setup.rs  streaming.rs  target_resolve.rs  users.rs
crates/seiran-api/src/handlers/admin/: emoji_import.rs  emojis.rs  mod.rs  site_settings.rs  storage.rs  users.rs
crates/seiran-api/src/handlers/misskey/: convert.rs  endpoints.rs  mod.rs  types.rs
crates/seiran-api/src/handlers/notes/: delivery.rs  dto.rs  mod.rs  queries.rs  validation.rs
crates/seiran-api/src/handlers/xrpc/: mod.rs  repo.rs  server.rs  sync.rs
crates/seiran-api/src/middleware/: auth.rs  authed_user.rs  misskey_auth_bridge.rs  mod.rs
crates/seiran-api/tests/: account_email_change_integration.rs  notes_integration.rs
crates/seiran-api/tests/support/: mod.rs
crates/seiran-atp-repo/: Cargo.toml
crates/seiran-atp-repo/src/: bsky_block_watch.rs  bsky_dm_poll.rs  bsky_follower_poll.rs  firehose.rs  lib.rs  main.rs
crates/seiran-common/: Cargo.toml
crates/seiran-common/migrations/: 20260621000000_init.sql  20260621000100_add_local_auth.sql  20260629000000_add_atp_signing_key.sql  20260629000001_add_atp_repo.sql  20260630000001_add_atp_records.sql  20260630000002_cleanup_atp_records_posts.sql  20260630000003_add_ap_inbox_url.sql  20260630000004_add_follows_status.sql  20260701000000_remove_auth0_sub.sql  20260701000001_add_email_verifications.sql  20260701000002_drop_verified_at.sql  20260701000003_add_user_role.sql  20260701000004_create_storage_providers.sql  20260701000005_create_media_files.sql  20260701000006_add_actor_media_columns.sql  20260701000007_create_post_attachments.sql  20260701000008_create_custom_emojis.sql  20260702000001_create_password_resets.sql  20260702000002_add_performance_indexes.sql  20260703000000_create_site_settings.sql  20260703100000_post_attachments_remote_url.sql  20260703200000_atp_repo_events_frame_bytes.sql  20260703300000_atp_events_identity.sql  20260704100000_posts_unique_repost.sql  20260705000000_add_custom_emoji_tags.sql  20260705100000_actors_withdrawn_at.sql  20260705200000_custom_emojis_license.sql  20260708100000_add_follows_atp_rkey.sql  20260709000000_posts_atp_repost_rkey.sql  20260710000000_posts_denormalize_is_local.sql  20260710000001_follows_perf_indexes.sql  20260710010000_reactions_one_per_actor.sql  20260713000000_reactions_emoji_url.sql  20260713010000_note_actor_emoji_map.sql  20260714000000_post_attachments_remote_mime_type.sql  20260715000000_media_files_video_audio.sql  20260715100000_post_attachments_remote_thumbnail.sql  20260716000000_media_files_bsky_video.sql  20260716010000_notifications.sql  20260716020000_notifications_reaction_emoji_url.sql  (+23 more)
crates/seiran-common/src/: crypto.rs  db.rs  hashtag.rs  id.rs  jetstream_control.rs  jetstream_leader.rs  lib.rs  mention.rs  secrets.rs  streaming.rs  system_actor.rs  traits.rs  username.rs
crates/seiran-common/src/ap/: client.rs  collection.rs  deliver.rs  mod.rs  outbox.rs  webfinger.rs
crates/seiran-common/src/atp/: client.rs  did.rs  did_resolve.rs  mod.rs  plc.rs  repo.rs  service.rs  service_auth.rs
crates/seiran-common/src/auth/: auth0.rs  local.rs  mod.rs
crates/seiran-common/src/jobs/: account_withdraw_unfollow_all.rs  actor_history_sync.rs  actor_metadata_resolve.rs  ap_delivery.rs  atp_repository_publish.rs  bsky_dm_send.rs  bsky_post_commit_deferred.rs  bsky_video_poll.rs  inbound_activity_process.rs  mod.rs  outbound_post_delivery.rs  proxy_follow_sync.rs  remote_actor_resolve.rs  remote_follow_list_sync.rs  resolve_bsky_mention.rs
crates/seiran-common/src/queue/: memory.rs  mod.rs  redis.rs  worker.rs
crates/seiran-common/src/repository/: actor.rs  app_token.rs  atp.rs  block.rs  dm.rs  email_change.rs  email_verification.rs  emoji.rs  follow.rs  hashtag.rs  list.rs  media_file.rs  mod.rs  mute.rs  notification.rs  password_reset.rs  pinned_post.rs  post.rs  reaction.rs  site_settings.rs  storage_provider.rs  user.rs
crates/seiran-common/src/storage/: exif.rs  image.rs  media_probe.rs  mod.rs  s3.rs  selector.rs
crates/seiran-federation-inbox/: Cargo.toml
crates/seiran-federation-inbox/src/: error.rs  lib.rs  main.rs
crates/seiran-federation-inbox/src/handlers/: actor.rs  featured.rs  inbox.rs  lists.rs  mod.rs  nodeinfo.rs  outbox.rs  webfinger.rs
crates/seiran-federation-worker/: Cargo.toml
crates/seiran-federation-worker/src/: lib.rs  main.rs
crates/seiran-server/: Cargo.toml
crates/seiran-server/src/: main.rs
docker/: Dockerfile  Dockerfile.frontend  nginx.conf  nginx.mono.conf  reload.tmpl
docs/: roles.md  (+20 more)
(+205 files in other folders)
