[package]
name = "seiran-api"
version = "0.1.0"
edition = "2021"

[dependencies]
seiran-common = { path = "../seiran-common" }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15.7"
