[package]
name = "seiran-api"
version = "0.1.0"
edition = "2021"

[dependencies]
seiran-common = { path = "../seiran-common" }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws", "multipart"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15.7"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2"
lettre = { version = "0.11", features = ["tokio1", "tokio1-rustls-tls", "smtp-transport", "builder"], default-features = false }
urlencoding = "2"
url = "2"
unicode-segmentation = "1"
html-escape = "0.2"
zstd = "0.13"
serde_ipld_dagcbor = "0.6"
hex = "0.4"
sha2 = "0.10"
jsonwebtoken = "9"
base64 = "0.22"
p256 = { version = "0.13.2", features = ["pkcs8", "pem"] }
dashmap = "6"
zip = { version = "2", default-features = false, features = ["deflate"] }
emojis = { version = "0.9.0", default-features = false }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
