[package]
name = "seiran-atp-repo"
version = "0.1.0"
edition = "2024"

[dependencies]
seiran-common = { path = "../seiran-common" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
ciborium = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
dotenvy = "0.15.7"
