[package]
name = "seiran-atp-repo"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1"
seiran-common = { path = "../seiran-common" }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
dotenvy = "0.15.7"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
urlencoding = "2.1.3"
