[package]
name = "seiran-common"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "chrono", "uuid", "macros" ] }
tokio = { version = "1", features = ["full", "sync", "time"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
argon2 = "0.5"
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
toml = "1.1.2"
p256 = { version = "0.13.2", features = ["pkcs8", "pem"] }
hex = "0.4.3"
thiserror = "2.0.18"
