[package]
name = "seiran-federation-inbox"
version = "0.1.0"
edition = "2021"

[dependencies]
seiran-common = { path = "../seiran-common" }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15.7"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
chrono = { version = "0.4" }
