[package]
name = "seiran-federation-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1"
dotenvy = "0.15.7"
seiran-common = { version = "0.1.0", path = "../seiran-common" }
tokio = { version = "1.52.3", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
