[package]
name = "seiran-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "seiran-server"
path = "src/main.rs"

[dependencies]
seiran-common = { path = "../seiran-common" }
seiran-api = { path = "../seiran-api" }
seiran-federation-inbox = { path = "../seiran-federation-inbox" }
seiran-federation-worker = { path = "../seiran-federation-worker" }
seiran-atp-repo = { path = "../seiran-atp-repo" }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15.7"
